--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 
 env:
   global:
+  
     - ANDROID_API_LEVEL=30
     - ANDROID_BUILD_TOOLS_VERSION=30.0.0
     - ANDROID_EMU_API_LEVEL=22
@@ -32,7 +33,7 @@ android:
     - extra-android-m2repository
     - extra-android-support
 
-    #bUILDING the emulator
+    #Build the emulator           
     - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
     
     
